istio/not_workin/mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: development
spec:
  mtls:
    #mode: STRICT
    mode: DISABLE 

---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: cassandra
spec:
  mtls:
    #mode: STRICT
    mode: DISABLE 

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name:  cassandra-client-mtls
  namespace: cassandra
spec:
  host: cassandra.cassandra.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: PASSTHROUGH
