istio/not_workin/sidecar.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: default
  namespace: cassandra
spec:
  egress:
  - hosts:
    - "./*"
    - "development/*"
---
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: default
  namespace: development
spec:
  egress:
  - hosts:
    - "./*"
    - "cassandra/*"
